--- a/test/components/test-harness-component.html
+++ b/test/components/test-harness-component.html
@@ -7,13 +7,15 @@
   <br-input br-model="$ctrl.sysSlug"
     br-options="{
       name: 'slug',
-      label: 'Short Name'
+      label: 'Short Name',
+      theme: 'material'
     }">
     <br-input-help>
       Enter a unique short name for this identity.
     </br-input-help>
   </br-input>
-  <button ng-click="$ctrl.addIdentity($ctrl.sysSlug)">Create Identity</button>
+  <md-button class="md-primary md-raised"
+    ng-click="$ctrl.addIdentity($ctrl.sysSlug)">Create Identity</md-button>
 </form>
 <h1>Test Data</h1>
 <pre>{{$ctrl.testData | json}}</pre>
